--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.hikari.maximum-pool-size=4
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.initialization-mode=always
-spring.datasource.password=0000
+spring.datasource.password=ehddus4100
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/cprivacy?useUnicode=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.initialize=true
